# Daemons

./: CMakeLists.txt  README.md  cpackage.json
3th/windows/LogSDK/: FindLogSDK.cmake  cpackage.json
3th/windows/LogSDK/include/: LogSDKEx.h
3th/windows/LogSDK/lib/windows/x64/debug/: lib_LogSDK.lib
3th/windows/LogSDK/lib/windows/x86/debug/: lib_LogSDK.lib
code/app/cmake_template_app/version/: win_version_info.rc
code/daemons/: CMakeLists.txt
code/daemons-mgr/: CMakeLists.txt
code/daemons/src/: accept_client.cpp  accept_client.hpp  error_defines.hpp  main.cpp  server.cpp  server.hpp  socket.hpp  socket_protocol.hpp  threadpool.hpp  threadsafe_queue.hpp  util.hpp
doc/public/: 守护服务使用说明.md
